--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.1",
+    "class-variance-authority": "^0.7.0",
     "ethers": "^5.7.2",
     "lucide-react": "^0.445.0",
     "next": "14.2.13",
